# text_on_image

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  main.rs  prelude.rs  test.rs  text_on_image.rs
