[package]
name = "text_on_image"
version = "0.1.0"
authors = ["Wyatt Bowen"]
edition = "2021"

readme = "README.md"
# repository = ""
# homepage = ""



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
rusttype = "0.9.3"
