[package]
name = "text_on_image"
version = "0.1.0"
authors = ["Wyatt Bowen"]
edition = "2021"

readme = "README.md"
description = "An easier way to place text on images."
license = "Apache-2.0"
repository = "https://github.com/wyatt-bowen/text_on_image"
homepage = "https://github.com/wyatt-bowen/text_on_image"

keywords = ["image","text","imageproc"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
rusttype = "0.9.3"
